# skogai

./: .envrc  .gitignore  .gitmodules  README.md  game.py
SkogRAG/: PKGBUILD  pyproject.toml  requirements.txt
SkogRAG/src/SkogRAG.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: aider.conf.yml  user-preferences.md
config/aichat/: aichat  config.yaml  functions  messages.md
config/aichat/agents/SkogAI/: rag.yaml
config/aichat/agents/aichat/: messages.md  rag.yaml
config/aichat/agents/demo/: messages.md  rag.yaml  variables.yaml
config/aichat/agents/todo/: messages.md
config/aichat/rags/: aichat.yaml  testrag.yaml
config/aichat/roles/: %functions%.md  SkogAI.md
config/zsh.d/: 00-skogai.env  01-alias.foo  01-path.env  02-path.zsh  10-regular-env.env  11-ollama.env  20-secrets.zsh  50-alias.env  80-argc-completions.zsh  81-aichat-completions.env  81-argc-completions.env  81-fabric-completions.env  81-gcloud-completions.env  81-warp-cli.env  alias.zsh  env.zsh  path.env  path.zsh  prompt.zsh  sgpt.zsh  skogai.env  zsh.d
docs/: cmd.md  filesystem.yml  git-flow-readme.md  git-project-basics.md  install.sh  references.md  setup.md
docs/help/: direnv.help  dotenv.help
docs/lib/: skogai.zsh.md
google/: .envrc  a.py  hello.py  pyproject.toml  todo.py
huggingface/: .envrc
lib/: skogai.zsh
scripts/: install.sh  installParu.sh  run_help.sh
scripts/setup/: chmod_scripts.sh  envrc.sh
secrets/: decrypt_secret.sh  decrypt_vault.sh  encrypt_secret.sh  encrypt_vault.sh  fetch_secret.sh  is_encrypted.sh
skog/: README.md
(+1 files in other folders)
